# counterpoint-lh

./: README.md  cabal.project  counterpoint-lh.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: counterpoint-lh-0.1.0.0-inplace.conf  package.cache
src/: Counterpoint.hs  Examples.hs
src/.liquid/: Counterpoint.hs.cst.html  Counterpoint.hs.html  Counterpoint.hs.json  Counterpoint.hs.vim.annot  Examples.hs.cst.html  Examples.hs.html  Examples.hs.json  Examples.hs.vim.annot
